[gd_scene load_steps=2 format=3 uid="uid://dltnwdp65vwy2"]

[ext_resource type="Script" uid="uid://d0o1v77fmhneh" path="res://scripts/game_ui.gd" id="1_jkspe"]

[node name="GameUi" type="CanvasLayer"]
script = ExtResource("1_jkspe")

[node name="GoldDisplay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GoldIcon" type="Label" parent="GoldDisplay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="GoldLabel" type="Label" parent="GoldDisplay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="WaveInfo" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.054
anchor_right = 0.089
anchor_bottom = 0.048
offset_left = -0.208
offset_top = -9.0
offset_right = -0.528
offset_bottom = -0.104

[node name="WaveLabel" type="Label" parent="WaveInfo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="EnemiesLabel" type="Label" parent="WaveInfo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="TimerLabel" type="Label" parent="WaveInfo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="NextWaveButton" type="Button" parent="WaveInfo"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "starte n√§chste runde"
